# pgxllm

./: .env.example  .gitignore  DECISIONS.md  Makefile  README.md  conftest.py  pyproject.toml  setup.sh
configs/: default.yaml
docs/: ADR-000-index.md  ADR-001-redesign-motivation.md  ADR-002-pipeline-design.md  ADR-003-antlr4-parser.md  ADR-004-internal-db.md  ADR-005-multi-db.md  ADR-006-graph-store.md  ADR-007-008-sample-and-relations.md  ADR-009-010-rule-and-pattern.md  ADR-011-012-eval-and-phases.md  make_ppt.py  pgxllm-decisions.docx  pgxllm.pptx
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  QueryPlanModal.jsx  UI.jsx
frontend/src/pages/: DbsPage.jsx  EvalPage.jsx  GraphRulesPages.jsx  LLMSettingsPage.jsx  QueryPage.jsx  SchemaPage.jsx
src/pgxllm/: cli.py  config.py
src/pgxllm/cache/: __init__.py  base.py  tfidf_cache.py
src/pgxllm/core/: __init__.py  models.py  pipeline.py  s1_understanding.py  s2_schema_linking.py  s3_generation.py  s4_validation.py
src/pgxllm/db/: __init__.py  connections.py  schema.py
src/pgxllm/eval/: __init__.py  bird.py
src/pgxllm/graph/: __init__.py  age.py  base.py  factory.py  neo4j.py  postgresql.py
src/pgxllm/intelligence/: __init__.py  db_registry.py  dialect_rule_detector.py  pattern_engine.py  refresh.py  relation_collector.py  rule_engine.py  (+2 more)
tests/: test_config.py  test_eval.py  test_intelligence.py  test_phase4.py
tests/core/: test_pipeline.py
tests/parser/: test_parser.py
(+31 files in other folders)
